room database for project and mock locations, slide up panel implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Scenic Sydney</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="main_activity_bottom_bar_header_text">Location List</string>
 </resources>
