DetailActivity and transitions updated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Scenic Sydney</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="main_activity_bottom_bar_header_text">Location List</string>
+    <string name="title_activity_detail">DetailActivity</string>
 </resources>
