--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="prompt_location_notes">Special Notes</string>
     <string name="detail_activity_unnamed_location">Unnamed Location</string>
     <string name="detail_activity_location_name_required">Location name is mandatory</string>
+    <string name="detail_activity_data_saved">Data Saved.</string>
 </resources>
