--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="detail_activity_unnamed_location">Unnamed Location</string>
     <string name="detail_activity_location_name_required">Location name is mandatory</string>
     <string name="detail_activity_data_saved">Data Saved.</string>
+    <string name="no_description_provided">No Description provided</string>
 </resources>
